<resources>
    <string name="app_name">Nulli</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_map">Map</string>
    <string name="title_mypage">My page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_free_board">자유게시판</string>
    <string name="menu_external_disabled_board">외부장애게시판</string>
    <string name="menu_internal_disabled_board">내부장애게시판</string>
    <string name="menu_develop_disabled_board">발달장애게시판</string>
    <string name="menu_mentality_disabled_board">정신장애게시판</string>

</resources>