<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_free_board">

    <fragment
        android:id="@+id/nav_free_board"
        android:name="com.example.nulli.drawer.ui.freeBoard.HomeFragment"
        android:label="@string/menu_free_board"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_external_disabled__board"
        android:name="com.example.nulli.drawer.ui.externalDisabledBoard.ExternelDiasbledBoardFragment"
        android:label="@string/menu_external_disabled_board"
        tools:layout="@layout/fragment_externel_disabled_board" />

    <fragment
        android:id="@+id/nav_internal_disabled_board"
        android:name="com.example.nulli.drawer.ui.internalDisabledBoard.InternalDisabledBoardFragment"
        android:label="@string/menu_internal_disabled_board"
        tools:layout="@layout/fragment_internal_disabled_board" />
    <fragment
        android:id="@+id/nav_develop_disabled_board"
        android:name="com.example.nulli.drawer.ui.internalDisabledBoard.InternalDisabledBoardFragment"
        android:label="@string/menu_develop_disabled_board"
        tools:layout="@layout/fragment_internal_disabled_board" />
    <fragment
        android:id="@+id/nav_mentality_disabled_board"
        android:name="com.example.nulli.drawer.ui.internalDisabledBoard.InternalDisabledBoardFragment"
        android:label="@string/menu_mentality_disabled_board"
        tools:layout="@layout/fragment_internal_disabled_board" />
</navigation>