<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_free_board"
            android:icon="@drawable/ic_board"
            android:title="@string/menu_free_board" />
        <item
            android:id="@+id/nav_external_disabled__board"
            android:icon="@drawable/ic_board"
            android:title="@string/menu_external_disabled_board" />
        <item
            android:id="@+id/nav_internal_disabled_board"
            android:icon="@drawable/ic_board"
            android:title="@string/menu_internal_disabled_board" />
        <item
            android:id="@+id/nav_develop_disabled_board"
            android:icon="@drawable/ic_board"
            android:title="@string/menu_internal_disabled_board" />
        <item
            android:id="@+id/nav_mentality_disabled_board"
            android:icon="@drawable/ic_board"
            android:title="@string/menu_internal_disabled_board" />

    </group>
</menu>